chore: add installer for windows