@@ -6,20 +6,18 @@
 
     <groupId>org.example</groupId>
     <artifactId>image-viewer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
-        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.main>com.imageviewer.view.fx.Main</project.main>
+        <project.name>image-viewer</project.name>
+        <project.version>1.0.0</project.version>
     </properties>
+
     <dependencies>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>21.0.2</version>
-        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -27,4 +25,63 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${project.main}</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>jpackage</executable>
+                    <arguments>
+                        <argument>--type </argument>
+                        <argument>exe</argument>
+                        <argument>--name</argument>
+                        <argument>Image Viewer</argument>
+                        <argument>--input</argument>
+                        <argument>target/</argument>
+                        <argument>--main-class</argument>
+                        <argument>${project.main}</argument>
+                        <argument>--main-jar</argument>
+                        <argument>${project.name}-${project.version}.jar</argument>
+                        <argument>--win-shortcut</argument>
+                        <argument>--icon</argument>
+                        <argument>target/classes/icon.ico</argument>
+                        <argument>--module-path</argument>
+                        <argument>C:\Program Files\Java\javafx-jmods-21.0.2</argument>
+                        <argument>--add-modules</argument>
+                        <argument>javafx.controls</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
